--- a/index.html
+++ b/index.html
@@ -21,6 +21,36 @@
 
 <body>
 
+    <div class="container">
+        <div class="menu">
+
+            <div class="menu-time"></div>
+            <h2 style="color: red;">Time Left</h2>
+            <h2>0</h2>
+
+            <div class="menu-score">
+                <h2 style="color: red;">Your Score</h2>
+                <h2>0</h2>               
+            </div>
+
+            <div class="menu-lives">
+                <img src="">
+                <h2>x3</h2>
+            </div>
+
+        </div>
+        <div class="panel">
+
+        </div>
+    </div>
+
+
+
+
+
+
+    <!-- boa pratica colocar o js no final do body, pra nao inicializar antes da pagina -->
+    <script defer src="./src/scripts/engine.js"></script>  
 </body>
 
 </html>
