estilizando o projeto correcao

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
     <div class="container">
         <div class="menu">
 
-            <div class="menu-time"></div>
+            <div class="menu-time">
             <h2 style="color: red;">Time Left</h2>
             <h2>0</h2>
-
+            </div>
+            
             <div class="menu-score">
                 <h2 style="color: red;">Your Score</h2>
                 <h2>0</h2>               
@@ -43,10 +44,6 @@
 
         </div>
     </div>
-
-
-
-
 
 
     <!-- boa pratica colocar o js no final do body, pra nao inicializar antes da pagina -->
