--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2 style="color: red;">Time Left</h2>
             <h2>0</h2>
             </div>
-            
+
             <div class="menu-score">
                 <h2 style="color: red;">Your Score</h2>
                 <h2>0</h2>               
@@ -41,6 +41,23 @@
 
         </div>
         <div class="panel">
+            <div class="panel-row">
+                <div class="square enemy" id="1"></div>
+                <div class="square" id="2"></div>
+                <div class="square" id="3"></div>
+            </div>
+
+            <div class="panel-row">
+                <div class="square" id="4"></div>
+                <div class="square" id="5"></div>
+                <div class="square" id="6"></div>
+            </div>
+
+            <div class="panel-row">
+                <div class="square" id="7"></div>
+                <div class="square" id="8"></div>
+                <div class="square" id="9"></div>
+            </div>
 
         </div>
     </div>
