criando os paineis principais

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="menu-lives">
-                <img src="">
+                <img src="./src/images/player.png" alt="foto jogador" height="60px">
                 <h2>x3</h2>
             </div>
 
@@ -58,6 +58,8 @@
                 <div class="square" id="8"></div>
                 <div class="square" id="9"></div>
             </div>
+
+            
 
         </div>
     </div>
