implementando as views e values

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
             <div class="menu-time">
             <h2 style="color: red;">Time Left</h2>
-            <h2>0</h2>
+            <h2 id="time-left">0</h2>
             </div>
 
             <div class="menu-score">
                 <h2 style="color: red;">Your Score</h2>
-                <h2>0</h2>               
+                <h2 id="score">0</h2>               
             </div>
 
             <div class="menu-lives">
